# CodeContext

./: .bumpversion.toml  .codecontextrc.json  .gitignore  AUDIT.md  MANIFEST.in  README.md  README.ru.md  VERSION.txt  aur_public_key.pub  codecontext.bat  codecontext.sh  install_context_menu.py  main.py  pyproject.toml  remove_context_menu.py  requirements.txt  user_settings.json  архитектура.txt
.github/workflows/: build.yml  publish.yml
.gitverse/workflows/: release.yml
aur_build/: .SRCINFO  LICENSE  PKGBUILD  codecontext.desktop  codecontext.install  codecontext.sh
docs/: ARCHITECTURE.md  AUR.md  CI_CD.md  DECISIONS.md  PATTERNS.md  PUBLISH.md  SOLID.md  TESTS.md  VERSIONING.md  desktop.ini
l10n/: README.ar.md  README.de.md  README.es.md  README.fr.md  README.hi.md  README.it.md  README.ja.md  README.ko.md  README.nl.md  README.pl.md  README.pt.md  README.ru.md  README.tr.md  README.zh.md
plugins/hello_world/: manifest.json  plugin.py
scripts/: sync-version.ps1  sync-version.sh
src/: __init__.py  cli_handler.py  config.py  di_container.py
src/actions/: action_types.py  dispatcher.py
src/api/: __init__.py  plugin_api.py
src/controllers/: cli_controller.py  main_controller.py
src/i18n/: __init__.py  (+15 more)
templates/: chatgpt_prompt_wrapper.jinja2  claude_xml_optimized.jinja2  code_review_diff.jinja2  csv_export.jinja2  documentation_writer.jinja2  html_report.jinja2  json_structured.jinja2  minimal_token_saver.jinja2  report.jinja2  security_audit.jinja2  summary_only.jinja2
tests/: check_git.py  check_git_base.py  conftest.py  test_ci_cd_integration.py  test_controllers.py  test_data_repo.py  test_monorepo_support.py  test_services.py  test_services_extra.py  test_store_and_actions.py  test_ui.py  test_use_cases.py  test_utils.py
themes/: apple.json  modern.json
(+58 files in other folders)
